--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,10 @@ build-iPhoneSimulator/
 
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
+
+
+# ignore google oauth files
+credentials.json
+token.yaml
+config.yaml
+/report*/
